# assignment2_algos_and_lambdas

./: CMakeLists.txt  README.md  main.cpp
lib_algos/: CMakeLists.txt
lib_algos/include/: algos.h  spelen_met.cpp  spelen_met.h  task.h
tests/: CMakeLists.txt  algo_tests.cpp  test_helper.h  test_runner.cpp
